# reducethemtokens

./: CHANGELOG.md  CLAUDE.md  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
.rtt/: context.txt
rtt/: audit.py  bench.py  cli.py  extractor.py  formatter.py  installer.py
rtt/languages/: __init__.py  csharp_lang.py  dart_lang.py  kotlin_lang.py  php_lang.py  registry.py  scala_lang.py  swift_lang.py
tests/: test_accuracy_controlled.py  test_cli.py  test_extractor.py  test_formatter.py  test_installer.py
tests/fixtures/: sample.cs  sample.dart  sample.kt  sample.php  sample.scala  sample.swift
