[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reducethemtokens"
version = "0.5.2"
description = "Compress any code repo into a compact skeleton to reduce LLM token usage"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "yttrium400" },
]
keywords = [
    "llm", "tokens", "context-window", "code-analysis",
    "tree-sitter", "compression", "skeleton", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-swift>=0.7.0",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/yttrium400/reducethemtokens"
Repository = "https://github.com/yttrium400/reducethemtokens"
Issues = "https://github.com/yttrium400/reducethemtokens/issues"

[project.scripts]
rtt = "rtt.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov"]
llm = ["anthropic>=0.30.0"]

[tool.hatch.build.targets.wheel]
packages = ["rtt"]
